# MaterialMaster

./: .replit  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE.txt  README.md  app.py  compile_translations.py  config.py  pyproject.toml
services/: ai_service.py  ai_service_broken.py  ocr_service.py  pdf_service.py  pdf_service_simple.py  pdf_service_unicode.py  vector_service.py
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  analysis.html  base.html  index.html
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/ru/LC_MESSAGES/: messages.mo  messages.po
uploads/: .gitkeep
utils/: file_utils.py
